// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SectionBackground/> should render SectionBackground with background dark 1`] = `
.c0 {
  -webkit-transition: background 300ms ease-in-out;
  transition: background 300ms ease-in-out;
  background: #F2F2F2;
  min-height: 100vh;
  width: 100%;
  background: #0D0D0D;
  color: #F2F2F2;
}

.c1 {
  max-width: 120rem;
  padding: 2.4rem;
  width: 100%;
  margin: 0 auto;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <h1>
        Children
      </h1>
    </div>
  </div>
</div>
`;

exports[`<SectionBackground/> should render SectionBackground with background white 1`] = `
.c0 {
  -webkit-transition: background 300ms ease-in-out;
  transition: background 300ms ease-in-out;
  background: #F2F2F2;
  min-height: 100vh;
  width: 100%;
}

.c1 {
  max-width: 120rem;
  padding: 2.4rem;
  width: 100%;
  margin: 0 auto;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <h1>
        Children
      </h1>
    </div>
  </div>
</div>
`;
